# the-mesh

./: .gitignore  .mcp.json  CLAUDE.md  README.md  computable_spec_example.md  discussion.md  frontedtask_proposul.md  memo.md  pyproject.toml  workflow_idea.md
.claude/skills/the-mesh/: SKILL.md
.claude/skills/the-mosaic/: SKILL.md
TRIR_aproach/trir/: expression.schema.json  schema.schema.json  tools.schema.json
TRIR_aproach/trir/docs/: TRIR_COMPLETENESS_ANALYSIS.md  trir-design-rationale.md  trir-json-ast-spec.md
TRIR_aproach/trir/poc/: __init__.py  convert_to_tagged.py  demo.py  engine.py  generate_upstream_docs.py  graph.py  validator.py  verify_edge_cases.py
docs/: frontend-extension-implementation-plan.md  frontend-extension-proposal.md
examples/: ar_clearing_extended.mesh.json  ar_clearing_real.mesh.json  reservation.mesh.json
experiments/: accounting.ts
poc/: accounting-core.mesh.json  accounting-openapi.json  accounting-types.ts  accounting-validators.ts
specs/: accounting_v2.yaml  accounting_v3.yaml
specs/v5/: accounting_full.yaml  reservation_system.yaml
specs/v6/: ecommerce_order.yaml
src/the_mesh/: __init__.py
src/the_mesh/config/: __init__.py  project.py
src/the_mesh/core/: __init__.py  cache.py  engine.py  errors.py  utils.py  validator.py
src/the_mesh/generators/: __init__.py  constraint_inference.py  edge_case_gen.py  human_readable_gen.py  zod_gen.py  (+12 more)
tests/: test_accounting_full.py  test_ecommerce_order.py  test_frontend_validation.py  test_graph.py  test_jest_gen.py  test_openapi_gen.py  test_reservation_system.py  test_task_management.py  test_task_manager.py  test_typescript_gen.py  test_validator.py  test_zod_gen.py
tools/: bundle_generator.py  db_schema_generator.py  expression_parser.py  formula_evaluator.py  req_integrity_checker.py  test_generator.py  ts_analyzer.py
yaml_aproach/: ARCHITECTURE.md  discussion.md  discussion_summary.md
yaml_aproach/docs/: formula-language.md  openapi.yaml
yaml_aproach/specs/: accounting.yaml  accounting_v4_stress.yaml  accounting_v5_broken.yaml  accounting_v5_req_first.yaml
yaml_aproach/tests/: test_reservation_system.py  test_task_management.py
yaml_aproach/tools/: change_simulator.py  formula_evaluator.py  formula_parser.py  human_view_generator.py  openapi_generator.py  scenario_analyzer.py  spec_analyzer.py  spec_parser.py
上流工程/01_企画・立上げ/: 01_プロジェクト憲章_会計領域版.md  02_ステークホルダー登録簿.md  03_リスク登録簿_初期.md
上流工程/02_要件定義/: 01_会計ビジネス要件定義書.md  02_勘定科目マスタ定義.md  03_取引パターン洗い出し.md  04_仕訳ルール定義.md  05_税コード・税区分定義.md  06_決算カレンダー・統制要件.md  07_RTM_要件トレーサビリティ.md
上流工程/03_基本設計/: 01_アーキテクチャ設計_会計モジュール.md  02_方式設計_認証・監査・電帳法.md  03_画面設計_伝票入力・照会.md  04_データモデル_論理ER.md  05_テスト基本設計.md
上流工程/04_詳細設計/: 01_仕訳生成コンポーネント設計.md  02_消込ロジック設計.md  03_資産台帳・減価償却設計.md  04_税計算・申告補助設計.md  05_物理ER・テーブル定義.md  06_バッチ・ジョブネット設計.md
上流工程/05_TRIR自動生成/: 00_統合仕様書.md  01_システム概要.md  02_ビジネス要件定義書.md  03_データモデル_論理ER.md  03_状態遷移定義.md  04_消込ロジック設計.md  04_計算フィールド定義.md  05_テストシナリオ.md  06_不変条件・整合性ルール.md
(+179 files in other folders)
