[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "the-mesh"
version = "0.2.0"
description = "Specification validation MCP server for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "The Mesh Contributors"}
]
keywords = ["mcp", "specification", "validation", "claude", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jsonschema>=4.20.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
the_mesh = "the_mesh.mcp.server:main_sync"

[project.urls]
Homepage = "https://github.com/the-mesh/the-mesh"
Repository = "https://github.com/the-mesh/the-mesh"

[tool.hatch.build.targets.wheel]
packages = ["src/the_mesh"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/examples",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
